# ResizeWizard

./: README.md  config.py  pyproject.toml
app/: __init__.py  routes.py  utils.py
static/css/: style.css
templates/: index.html
